test/tests/operators/write_delimited/12_error_unsupported_multi_series_type.txt
error: expected `string`, `blob`, or `null`, but got `int64`
 --> tests/operators/write_delimited/12_error_unsupported_multi_series_type.tql:8:19
  |
8 |   write_delimited this[key], "|"
  |                   ^^^^^^^^^ 
  |
